# plasmoid-eventlist

./: .gitignore  AUTHORS  CMakeLists.txt  Changelog  README  TODO
po/: CMakeLists.txt  Messages.sh  cs.po  de.po  es.po  eventapplet.pot  fr.po  it.po  ru.po  sk.po  uk.po
src/: CMakeLists.txt  checkboxdialog.cpp  checkboxdialog.h  eventapplet.cpp  eventapplet.h  eventappletformatconfig.ui  eventappletgeneralconfig.ui  eventfiltermodel.cpp  eventfiltermodel.h  eventitemdelegate.cpp  eventitemdelegate.h  eventmodel.cpp  eventmodel.h  eventtreeview.cpp  eventtreeview.h  formatconfig.cpp  formatconfig.h  generalconfig.cpp  generalconfig.h  headerdelegate.h  korganizerappletutil.h  plasma-applet-events.desktop  propertyfiltermodel.cpp  propertyfiltermodel.h  todoformatconfig.ui
src/applet/: CMakeLists.txt  Messages.sh  eventapplet-default.desktop  eventapplet.cpp  eventapplet.h  eventappletcolorconfig.ui  eventappletformatconfig.ui  eventappletgeneralconfig.ui  eventfiltermodel.cpp  eventfiltermodel.h  eventitemdelegate.cpp  eventitemdelegate.h  eventmodel.cpp  eventmodel.h  eventtreeview.cpp  eventtreeview.h  generalconfig.cpp  generalconfig.h  headerdelegate.cpp  korganizerappletutil.cpp  korganizerappletutil.h  plasma-applet-events.desktop  todoformatconfig.ui
src/dataengine/: CMakeLists.txt  eventengine.cpp  eventengine.h  korganizerengineutil.cpp  korganizerengineutil.h  plasma-engine-events.desktop
